# krnl4

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md
arch/x86/boot/: mbh.S  multiboot.S
arch/x86/krnl4/: types.h
arch/x86/krnl4/cpu/: cpu.c  cpu.h  irq.h  msr.h
arch/x86/krnl4/mmu/: gdt.c  gdt.h  gdtr.h  idt.h  idtr.h  ldt.h  ldtr.h  segdesc.c  segdesc.h  selreg.h  tr.h  tssdesc.c  tssdesc.h
arch/x86/krnl4/sync/: atomic32.h
doc/: CMakeLists.txt  index.md  krnl4_layout.xml  krnl4_stylesheet.css
include/: config.h.cmake
include/generic/: macros.h  poison.h
include/krnl4/: panic.h  types.h
include/krnl4/cpu/: cpu.h  irq.h
include/krnl4/sync/: atomic32.h
init/: CMakeLists.txt  mbi.c  mbi.h  multiboot.c  multiboot.h
kernel/: CMakeLists.txt  Doxyfile.in  krnl4.c  krnl4.lds
kernel/misc/: panic.c
lib/: CMakeLists.txt  assert.h  list.h  placeholder.c  stddef.h
src/: CMakeLists.txt  placeholder.c
tools/: build_floppy.sh  grub.cfg
